test: add edge cases and improve concurrency tests
- Add test for getting non-existent partner (404)
- Add test for creating partner with blank name (400)
- Add test for deleting non-existent partner (404)
- Refactor concurrency test to use CyclicBarrier and ExecutorService
- Track and assert concurrent operation errors with AtomicInteger
- Improve assertions using AssertJ fluent API
- Replace Arrays.asList with List.of and remove unused imports